--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-243.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 台湾-1.90MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇳🇱 荷兰-256.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇨🇳 中国-495.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-866.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇳🇱 荷兰-495.6KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.59.206, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-260.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-17.83MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.27MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-249.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇳🇱 荷兰-170.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇳🇱 荷兰-571.6KB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.09MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-243.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-289.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-866.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-495.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.27MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-249.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.1KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
