--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-291.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇳🇱 荷兰-491.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇸🇬 新加坡-307.8KB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
-  - {name: 未知国家-4.22MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇺🇸 美国-430.1KB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
-  - {name: 🇺🇸 美国-609.9KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: ga.gnailiad.ga, port: 2443, type: vmess, uuid: 5b6fd9e2-0bf7-4eee-92d6-21b7bdae7062, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-527.2KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-301.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-176.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇮🇳 印度-497.9KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.32MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-178.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-491.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-307.8KB/s(Youtube:不良林)
-      - 未知国家-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-527.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-301.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-497.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
